
syntax="proto3";
option java_multiple_files = true;
option java_package = "io.github.leeseojune53.proto";
option java_outer_classname = "UserProto";

service User {
  rpc getUser(UserRequest) returns (UserReply) {}
}

message UserRequest {
  int32 userId = 1;
}

message UserEntry {
  int32 userId = 1;
  string userName = 2;
  bool result = 3;
}

message UserReply {
  UserEntry result = 1;
}